[gd_scene load_steps=7 format=2]

[ext_resource path="res://Towers/Repulsortower.png" type="Texture" id=1]
[ext_resource path="res://Towers/BaseTower.tscn" type="PackedScene" id=2]
[ext_resource path="res://Towers/RepulsorTower.gd" type="Script" id=3]
[ext_resource path="res://Towers/SlowFieldPivot.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 13 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 16 )

[node name="RepulsorTower" instance=ExtResource( 2 )]
script = ExtResource( 3 )
attack_range = 0.0
slow_amount = 0.5

[node name="Sprite" parent="." index="2"]
texture = ExtResource( 1 )
hframes = 4

[node name="PlacementCollider" parent="." index="3"]
shape = SubResource( 1 )

[node name="SlowFieldPivot" type="Node2D" parent="." index="5"]
script = ExtResource( 4 )

[node name="SlowField" type="Area2D" parent="SlowFieldPivot" index="0"]
monitorable = false
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlowFieldPivot/SlowField" index="0"]
position = Vector2( 63, -1 )
shape = SubResource( 2 )
